fix: use fixed width for slider images on mobile

--- a/catalog/view/theme/melle/stylesheet/sass/_slider.scss
+++ b/catalog/view/theme/melle/stylesheet/sass/_slider.scss
@@ -24,9 +24,13 @@
       }
     }
 
+    img {
+      max-width: 100%;
+      height: 350px;
+    }
+
     @media (min-width: 576px) {
       img {
-        max-width: 100%;
         height: 300px;
       }
     }
